# ed4all-lms

./: .dockerignore  README.md  fly.toml  pyproject.toml  run.py
.github/workflows/: deploy_docs.yml  python-unittest.yml
docs/: book.toml
docs/src/: SUMMARY.md  chapter_1.md  chapter_2.md  chapter_3.md  chapter_4.md
lms_backend/app/: __init__.py  auth.py  config.py  db.py  models.py  utils.py
lms_backend/app/courses/: routes.py
lms_backend/app/siyavula/: routes.py  services.py
lms_backend/app/templates/: index.html
lms_backend/app/users/: routes.py
lms_backend/tests/: test_assignments.py  test_users.py
