[project]
name = "ed4all-lms"
version = "0.1.0"
description = "Learning Management System for Ed4All, our online tutoring company"
authors = [{name = "Dirk van der Laarse"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask-httpauth>=4.8.0",
    "flask-openapi3[swagger]>=4.0.3",
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.0",
    "httpx>=0.27.2",
    "pydantic[email]>=2.10.1",
]

[project.urls]
Homepage = "https://github.com/dvdl16/ed4all-lms"
Changelog = "https://github.com/dvdl16/ed4all-lms/releases"
Issues = "https://github.com/dvdl16/ed4all-lms/issues"
CI = "https://github.com/dvdl16/ed4all-lms/actions"

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0.1",
]
linting = [
    "ruff>=0.7.2",
]

[dependency-groups]
dev = []
